Added blank files folder

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,9 @@
 /html/modules/contrib
 /html/profiles/contrib
 /html/themes/contrib
-/html/sites/default/files
+/html/sites/default/files/*
+!/html/sites/default/files/.gitkeep
+!/html/sites/default/files/.htaccess
 /html/libraries
 vendor/
 .idea
