--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "goalgorilla/open_social": "~12.4.0",
         "php": "^8.0",
         "monolog/monolog": "^2.3.5",
-        "drupal/geolocation": "^3.13"
+        "drupal/geolocation": "^3.13",
+        "drupal/jsonapi_extras": "^3.26"
     },
     "repositories": [
         {
